--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Add your site or application content here -->
   <img src="img/mvlogo.png" alt="Mission Viable">"
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <p>For more inforamation send an <a href="mailto:info@missionviable.com">email.</a></p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
